service sort of work

--- a/app/components/carousel.hbs
+++ b/app/components/carousel.hbs
@@ -1,4 +1,4 @@
-<div class="slideshow-container">
+<div class="slideshow-container" style="display:none">
   {{!-- Full-width images with number and caption text --}}
   <center>
     <div class="mySlides fade">
