--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -20,22 +20,14 @@
     {{!-- Modals go here --}}
 
     {{!-- Page wrapper start --}}
-    <div class="page-wrapper with-navbar with-sidebar" data-sidebar-type="full-height overlayed-sm-and-down">
+    <div class="page-wrapper with-navbar" data-sidebar-type="full-height overlayed-sm-and-down">
 
         {{!-- Navbar start --}}
         <nav class="navbar">
             <Navigation>
             </Navigation>
         </nav>
-        {{!-- Navbar end --}}
 
-        {{!-- Sidebar overlay --}}
-        <div class="sidebar-overlay" onclick="halfmoon.toggleSidebar()"></div>
-
-        {{!-- Sidebar start --}}
-        <div class="sidebar">
-        </div>
-        {{!-- Sidebar end --}}
 
         {{!-- Content wrapper start --}}
         <div class="content-wrapper">
@@ -49,7 +41,7 @@
     {{!-- Page wrapper end --}}
 
     {{!-- Halfmoon JS --}}
-    <script src="https://cdn.jsdelivr.net/npm/halfmoon@1.1.1/js/halfmoon.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/halfmoon@1.1.1/js/halfmoon.js"></script>
 </body>
 
 {{!-- {{blog-post}} --}}
