--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,4 +1,6 @@
 {{page-title "Index"}}
 <Carousel></Carousel>
-<Product></Product>
+    {{#each @model as |item|}}
+        <Product @products={{item}}/>
+    {{/each}}
 {{outlet}}
