--- a/app/templates/product-page.hbs
+++ b/app/templates/product-page.hbs
@@ -1,17 +1,11 @@
 {{page-title "ProductPage"}}
-{{product-page object=model}}
 <div class="container-fluid">
     <div class="col-sm"></div>
     <div class="col-sm">
-        {{!-- {{#each @model as |item|}} --}}
+        {{#each @model as |item|}}
         <div class="w-800 mw-full">
             <div class="card p-0">
                 <div>
-                    <h2 class="content-title">
-                        <center>
-                            {{!-- {{item.title}} --}}
-                        </center>
-                    </h2>
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-sm">
@@ -19,10 +13,6 @@
                                     <div class="w-400 mw-full">
                                         <div class="card">
                                             <h4>Gallery</h4>
-                                            {{!-- {{#each item.ingredients as |ingredient|}}
-                                                <hr>
-                                                <p>{{ingredient}}</p>
-                                            {{/each}} --}}
                                         </div>
                                     </div>
                                 </div>
@@ -32,11 +22,16 @@
                                 <div class="content">
                                     <div class="w-400 mw-full">
                                         <div class="card">
-                                            <h4>Title</h4>
-                                            <h5>Pris</h5>
-                                            <p>Antal</p>
-                                            <p>Størrelse</p>
-                                            <button class="btn"> Tilføj til kurv</button>
+                                            <h4>{{item.name}}</h4>
+                                            <h5>{{item.price}} kr.</h5>
+                                            <input type="text" class="form-control" placeholder="Antal"> <br>
+                                            <select class="form-control" id="select-1">
+                                                <option value="" selected="selected" disabled="disabled">Vælg størrelse</option>
+                                                {{#each item.sizes as |size|}}
+                                                    <option value="small">{{size}}</option>
+                                                {{/each}}
+                                            </select> <br>
+                                            <button class="btn" id="addCart" type="button" {{on "click" this.addToCart}}> Tilføj til kurv</button>
                                         </div>
                                     </div>
                                 </div>
@@ -44,13 +39,18 @@
                         </div>
                      <div class="card">
                         <h3>Description</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia quos facere iusto, maiores porro odit rem quo consequatur, impedit vel laboriosam doloremque harum iste deserunt nisi sapiente quod minima vitae.</p>
+                        <p>{{item.description}}</p>
                      </div>
+                     {{#each this.cart.itemList as |item|}}
+                        <div>
+                            <h4>{{item.name}}</h4>
+                        </div>
+                    {{/each}}
                     </div>
                 </div>
             </div>
         </div>
-        {{!-- {{/each}} --}}
+        {{/each}}
     </div>
     <div class="col-sm"></div>
 </div>
