--- a/app/components/product.hbs
+++ b/app/components/product.hbs
@@ -1,8 +1,21 @@
 <div class="product">
-    <p>{{@products.category_id}}</p>
-    <div class="card w-400">
-        <img src="..." class="img-fluid" alt="responsive image">
-        <LinkTo @route="productPage" @query={{hash id=@products.id}} class="button nav-link">{{@products.name}}</LinkTo>
-        <p>{{@products.price}}</p>
+    <div class="d-flex flex-row" style="flex-wrap: wrap; display:flex; justify-content:center">
+        {{#each @products as |item|}}
+        <div class="w-400 mw-full"> <!-- w-400 = width: 40rem (400px), mw-full = max-width: 100% -->
+            <div class="card p-0"> <!-- p-0 = padding: 0 -->
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b6/Image_created_with_a_mobile_phone.png/640px-Image_created_with_a_mobile_phone.png" class="img-fluid rounded-top" alt="...">
+                <div class="content">
+                    <p>{{item.category_id}}</p>
+                    <h2 class="content-title">
+                        <LinkTo @route="productPage" @query={{hash id=item.id}} class="button nav-link">{{item.name}}</LinkTo>
+                    </h2>
+                    <p class="text-muted">
+                        <p>{{item.price}} kr.</p>
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        {{/each}}
     </div>
 </div>
