--- a/app/components/navigation.hbs
+++ b/app/components/navigation.hbs
@@ -5,7 +5,7 @@
     <div class="dropdown toggle-on-hover">
         <button class="btn" data-toggle="dropdown" type="button" id="..." aria-haspopup="true" aria-expanded="false">
             Kurv <i class="fa fa-angle-down ml-5 fa-solid fa-cart-shopping" aria-hidden="true"
-                style="visibility:hidden;"> halllo0000000000000000000000000ooo</i> {{!-- ml-5 = margin-left: 0.5rem
+                style="visibility:hidden;"> halllo000000000</i> {{!-- ml-5 = margin-left: 0.5rem
             (5px) --}}
         </button>
         <div class="dropdown-menu" aria-labelledby="...">
