--- a/app/components/login.hbs
+++ b/app/components/login.hbs
@@ -2,7 +2,7 @@
     {{!-- Inline form with form-groups --}}
     <form {{on "submit" this.onSubmit}} class="form-inline w-400 mw-full">
         <div class="form-group">
-            <label class="required w-100" for="username">USername</label>
+            <label class="required w-100" for="username">Username</label>
             <Input type="text" class="form-control" placeholder="Username" id="Username" required="required"
                 @value={{this.username}} />
         </div>
