--- a/app/templates/product-page.hbs
+++ b/app/templates/product-page.hbs
@@ -13,7 +13,7 @@
                                     <div class="w-400 mw-full">
                                         <div class="card">
                                             <h4>Gallery</h4>
-                                            <img style="width: 20vw;" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b6/Image_created_with_a_mobile_phone.png/640px-Image_created_with_a_mobile_phone.png" alt="">
+                                            <img style="width: 20vw;" src={{item.image}} alt="">
                                         </div>
                                     </div>
                                 </div>
