--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -24,8 +24,7 @@
 
         {{!-- Navbar start --}}
         <nav class="navbar">
-            <Navigation>
-            </Navigation>
+            <Navigation @products={{@model}}/>
         </nav>
 
 
